# tusk-api

./: README.md  docker-compose.yml  example.env  pyproject.toml
core/: settings.py  urls.py
labels/: models.py  serializers.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_remove_label_tasks.py
projects/: models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py
tasks/: models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_labels.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
utils/: get_api_url.py
